--- a/react-w-praktyce/package.json
+++ b/react-w-praktyce/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.11.0",
+    "formik": "^2.1.6",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
